Add basic home page template

--- a/server/templates/home.tmpl
+++ b/server/templates/home.tmpl
@@ -1,5 +1,24 @@
 {{ define "home.tmpl" }}
-<html>
-  <h1>Cocopills</h1>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>cocopills</title>
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,400;0,600;1,700&display=swap" rel="stylesheet"> 
+  <link rel="stylesheet" href="/assets/home.css">
+</head>
+<body>
+  <span class="ball b-primary"></span>
+  <span class="ball b-contrast"></span>
+  <span class="ball b-secondary"></span>
+  <section class="home">
+    <h1 class="title">
+      <span class="c-secondary">c</span>o<span class="c-contrast">c</span>o<span class="c-primary">p</span>ills</h1>
+    <p>knowledge in small doses</p>
+    <button class="sign-up-button">SIGN UP</button>
+  </section>
+</body>
 </html>
 {{ end }}
